--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="meta-info">
   <meta charset="UTF-8">
-  <title th:text="${title}"/>
+  <title th:text="${title}"></title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
-<body >
+<body>
 <div th:fragment="navbar" class="container-fluid">
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -17,7 +17,23 @@
       <li class="nav-item"><a th:href="@{/categories}" class="nav-link">Категории</a></li>
       <li class="nav-item"><a th:href="@{/comments}" class="nav-link">Комментарии</a></li>
       <li class="nav-item"><a th:href="@{/screens}" class="nav-link">Скриншоты</a></li>
+      <form action="/uploadData" method="post" enctype="multipart/form-data">
+        <input type="file" name="file" id="fileInput" style="display: none;" />
+        <button type="button" onclick="document.getElementById('fileInput').click();" class="btn btn-primary">Выгрузить данные</button>
+        <input type="submit" style="display: none;" />
+      </form>
       <li class="nav-item"><a th:href="@{/about}" class="nav-link active" aria-current="page">Автор</a></li>
+
+      <div sec:authorize="isAuthenticated()">
+        <li class="nav-item"><a th:href="@{/profile}" class="nav-link">Профиль</a></li>
+        <form th:action="@{/logout}" method="post">
+          <button type="submit" class="btn btn-danger">Выйти</button>
+        </form>
+      </div>
+      <div sec:authorize="isAnonymous()">
+        <li class="nav-item"><a th:href="@{/login}" class="nav-link">Вход</a></li>
+        <li class="nav-item"><a th:href="@{/register}" class="nav-link">Регистрация</a></li>
+      </div>
     </ul>
     <h1 th:text="${headerTitle}"></h1>
   </header>
