--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Spring Security Example </title>
+  <title>Login</title>
 </head>
 <body>
-<div th:if="${param.error}">
-  Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-  You have been logged out.
-</div>
+<h1>Login</h1>
+<p th:if="${param.error}" class="error">Wrong email or password</p>
 <form th:action="@{/login}" method="post">
-  <div><label> User Name : <input type="text" name="username"/> </label></div>
-  <div><label> Password: <input type="password" name="password"/> </label></div>
-  <div><input type="submit" value="Sign In"/></div>
+  <label for="email">Email</label>:
+  <input type="text" id="email" name="username" autofocus="autofocus" /> <br />
+  <label for="password">Password</label>:
+  <input type="password" id="password" name="password" /> <br />
+  <input type="submit" value="Log in" />
 </form>
 </body>
 </html>
