--- a/src/main/resources/templates/comments/index.html
+++ b/src/main/resources/templates/comments/index.html
@@ -3,31 +3,44 @@
 <head th:replace="~{fragments/header :: meta-info}"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" th:href="@{/css/style.css}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <head>
-  <title>Комментарии</title>
+    <title>Комментарии</title>
+    <style>
+    .rating-column {
+        width: 150px; /* Adjust the width as needed */
+    }
+</style>
 </head>
 <body>
 <div th:replace="~{fragments/header :: navbar}"/>
-<div  class="container">
+<div class="container">
     <h1>Комментарии</h1>
     <a class="btn btn btn-primary" style="margin-bottom: 1rem;" th:href="@{/software}" role="button">Вернуться</a>
-    <span th:if="${comments?.size() == 0}">Список категорий пуст</span>
+    <span th:if="${comments?.size() == 0}">Список комментариев пуст</span>
     <table th:if="${comments?.size() > 0}" class="table table-hover">
         <thead class="thead-dark">
         <tr>
-            <td>Текст комментария</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>Комментарий</td>
+            <td>Оценка</td>
             <td></td>
         </tr>
         </thead>
         <tbody>
         <tr th:each="comment : ${comments}">
-            <td th:text="${comment.comment}"/>
-            <td><a href="#" class="btn btn-danger" th:attr="data-id=${comment.id}" onclick="confirmDelete(this);">Удалить</a></td>
+            <td th:text="${comment.comment}"></td>
+            <td class="rating-column">
+                <div class="ms-auto text-end">
+                    <span th:each="i : ${#numbers.sequence(1, 5)}">
+                        <i th:if="${i <= comment.rating}" class="fas fa-star"></i>
+                        <i th:if="${i > comment.rating}" class="far fa-star"></i>
+                    </span>
+                </div>
+            </td>
+            <td th:if="${#authorization.expression('hasRole(''ADMIN'')') || comment.user.email == #authentication.principal.username}">
+                <a href="#" class="btn btn-danger" th:attr="data-id=${comment.id}" onclick="confirmDelete(this);">Удалить</a>
+            </td>
         </tr>
-
         </tbody>
     </table>
 </div>
@@ -39,7 +52,8 @@
             window.location.href = '/comments/delete/' + entityId;
         }
     }
-    </script>
-
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
