--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Login</title>
+  <title>Авторизация</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+  <style>
+    body {
+      background-color: #202124;
+      color: #ffffff;
+    }
+    .container {
+      margin-top: 50px;
+      max-width: 400px;
+    }
+    .form-control {
+      background-color: #333333;
+      color: #ffffff;
+      border-color: #555555;
+    }
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+    .btn-secondary {
+      background-color: #555555;
+      border-color: #555555;
+    }
+  </style>
 </head>
 <body>
-<h1>Login</h1>
-<p th:if="${param.error}" class="error">Wrong email or password</p>
-<form th:action="@{/login}" method="post">
-  <label for="email">Email</label>:
-  <input type="text" id="email" name="username" autofocus="autofocus" /> <br />
-  <label for="password">Password</label>:
-  <input type="password" id="password" name="password" /> <br />
-  <input type="submit" value="Log in" />
-</form>
+<div class="container">
+  <h1>Авторизация</h1>
+  <p th:if="${param.error}" class="alert alert-danger">Неверные  почта или пароль</p>
+  <form th:action="@{/login}" method="post">
+    <div class="mb-3">
+      <label for="email" class="form-label">Электронная почта</label>
+      <input type="text" id="email" name="username" class="form-control" autofocus="autofocus" />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Пароль</label>
+      <input type="password" id="password" name="password" class="form-control" />
+    </div>
+    <button type="submit" class="btn btn-primary">Войти</button>
+  </form>
+  <p class="mt-3">Ещё нет аккаунта? <a href="/register" class="btn btn-secondary">Регистрация</a></p>
+</div>
 </body>
 </html>
