--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,25 +1,69 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-  <title>Sign Up</title>
+  <title>Регистрация</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+  <style>
+        body {
+            background-color: #202124;
+            color: #ffffff;
+        }
+        .container {
+            margin-top: 50px;
+            max-width: 400px;
+        }
+        .form-control {
+            background-color: #333333;
+            color: #ffffff;
+            border-color: #555555;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        .btn-secondary {
+            background-color: #555555;
+            border-color: #555555;
+        }
+        .error {
+            color: #ff0000;
+        }
+    </style>
 </head>
 <body>
-<h1>Sign Up</h1>
-<p th:if="${param.error}" class="error">Registration failed</p>
-<form th:action="@{/register}" method="post" th:object="${user}">
-  <label for="email">Email </label>:
-  <input type="text" id="email"  th:field="*{email}" /> <br />
-  <label for="password">Password </label>:
-  <input type="password" id="password" th:field="*{password}"/> <br />
-  <label for="first_name">First Name </label>:
-  <input type="text" id="first_name"  th:field="*{firstName}" /> <br />
-  <label for="last_name">Last Name </label>:
-  <input type="text" id="last_name"  th:field="*{lastName}" /> <br />
-  <input type="submit" value="Sign Up" /> <br />
-</form>
-
-<p>Already have an account? </p> <br/>
-<a href="/login">Login</a>
+<div class="container">
+  <h1>Регистрация</h1>
+  <p th:if="${param.error}" class="alert alert-danger">Регистрация не удалась</p>
+  <form th:action="@{/register}" method="post" th:object="${user}">
+    <div class="mb-3">
+      <label for="email" class="form-label">Электронная почта</label>
+      <input type="text" id="email" th:field="*{email}" class="form-control"/>
+      <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+    </div>
+    <div class="mb-3">
+      <label for="login" class="form-label">Логин</label>
+      <input type="text" id="login" th:field="*{login}" class="form-control"/>
+      <div class="error" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Пароль</label>
+      <input type="password" id="password" th:field="*{password}" class="form-control"/>
+      <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+    </div>
+    <div class="mb-3">
+      <label for="first_name" class="form-label">Имя</label>
+      <input type="text" id="first_name" th:field="*{firstName}" class="form-control"/>
+      <div class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
+    </div>
+    <div class="mb-3">
+      <label for="last_name" class="form-label">Фамилия</label>
+      <input type="text" id="last_name" th:field="*{lastName}" class="form-control"/>
+      <div class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
+    </div>
+    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+  </form>
+  <p class="mt-3">Уже есть аккаунт? <a href="/login" class="btn btn-secondary">Войти</a></p>
+</div>
 </body>
 </html>
